# BigInt

./: .gitignore  CMakeLists.txt  README.md  build.sh  create_zip.sh
benchmarks/: bench_primitives.cpp
include/: aligned_alloc.tpp  bignum.hpp
lib/: bignum.cpp
src/: part1_main.cpp
tests/: test_addition_bignum.cpp  test_division_bignum.cpp  test_init.cpp  test_initialize_bignum.cpp  test_multiplication_bignum.cpp  test_power_bignum.cpp  test_rightshift_bignum.cpp  test_uint64_operations.cpp
